# audio_plugin

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
Source/: ExplosionEffect.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SoundEffect.h
Source/Effects/: ExplosionEffect.cpp  ExplosionEffect.h  LaserEffect.cpp  LaserEffect.h  MagicEffect.cpp  MagicEffect.h  SurpriseEffect.cpp  SurpriseEffect.h  WaterWaveEffect.cpp  WaterWaveEffect.h
